# cluster

./: .editorconfig  .gitattributes  .gitignore  .golangci.yml  .markdownlint.json  .pre-commit-config.yaml  .sops.yaml  .yamllint.yml  AUDIT.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GAPS.md  LICENSE  Makefile  PLAN.md  README.md  ROADMAP.md  SECURITY.md  baseline.json  bootstrap  cache-gc  cliff.toml  cluster-label  go.mod  go.sum  rag-reindex  repo-sync
.github/workflows/: ci.yml  e2e.yml  release.yml
ci/: check-wasm-size.sh
cluster/: inventory.yaml
cluster/base/: kustomization.yaml
cluster/dashboards/: cluster-overview.json  gateway-qps-latency.json  gpu-vram-per-node.json
cluster/flux-system/: gotk-sync.yaml  kustomization.yaml
cmd/bootstrap/: main.go
cmd/cache-gc/: atime_linux.go  atime_other_unix.go  atime_unix.go  main.go
cmd/cluster-bootstrap/: main.go
cmd/cluster-join/: main.go
cmd/cluster-label/: main.go
cmd/cluster-probe/: main.go
configs/: namespaces.yaml
docs/: DATA-GOVERNANCE.md  FEDERATED-PRIVACY.md  MODEL-REBUILD-GUARANTEE.md  architecture.md  dns-and-service-names.md  embedding-models.md  image-video-generation.md  multi-node-training.md  ollama-daemon-setup.md  secrets-management.md  storage-tiering.md  tuning.md  video-generation.md
python/: pyproject.toml  train.py  train_image_lora.py
tmp/: baseline-exec.json  baseline.json  final-exec.json  generic-audit-baseline.txt  packages.txt  post-exec.json  session-log.md  test-results.txt  vet-results.txt
tools/: setup-llama-cpp.sh
web/: console.wasm
(+134 files in other folders)
