[project]
name = "cluster-training"
version = "0.1.0"
description = "Training scripts for the AI cluster (Python/PyTorch only)."
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3",
    "unsloth",
    "trl",
    "transformers",
    "datasets",
    "peft",
    "accelerate",
    "bitsandbytes",
    "sentencepiece",
    "evaluate",
    "nltk",
    "sacrebleu",
]

[project.optional-dependencies]
image = []
dev = [
    "ruff",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["cluster_training"]

[tool.hatch.build.targets.wheel]
packages = ["cluster_training"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
